tests/ui/issues/issue-7867.stderr
error[E0308]: mismatched types
  --> $DIR/issue-7867.rs:7:9
   |
LL | enum A { B, C }
   |          - unit variant defined here
...
LL |     match (true, false) {
   |           ------------- this expression has type `(bool, bool)`
LL |         A::B => (),
   |         ^^^^ expected `(bool, bool)`, found `A`
   |
   = note: expected tuple `(bool, bool)`
               found enum `A`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
